PRODENG-2283 local make options
- instructions and build target for local testing
- separation of unit and acceptance testing

Signed-off-by: James Nesbitt <james.r.nesbitt@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,7 +86,6 @@ jobs:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
       - run: go mod download
-      - env:
-          TF_ACC: "1"
+      - name: run unit tests
         run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
